[gd_scene load_steps=11 format=3 uid="uid://djylmh0fn0nh6"]

[ext_resource type="Texture2D" uid="uid://c0qovuv1s24l7" path="res://Assets/Enemies/the_maxim.png" id="1_ni0dt"]
[ext_resource type="Script" uid="uid://6xnpecn2huhd" path="res://Scenes/maxim.gd" id="1_up2a6"]
[ext_resource type="Shader" uid="uid://dqlgtuowbyn8v" path="res://Shaders/flash.gdshader" id="2_5pdug"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dmpk5"]
resource_local_to_scene = true
shader = ExtResource("2_5pdug")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72fwa"]
size = Vector2(38, 56)

[sub_resource type="Animation" id="Animation_a72m1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c8ik4"]
resource_name = "bite"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_m4n7q"]
resource_name = "follow"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_5lsy6"]
resource_name = "wake_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xd352"]
_data = {
&"RESET": SubResource("Animation_a72m1"),
&"bite": SubResource("Animation_c8ik4"),
&"follow": SubResource("Animation_m4n7q"),
&"wake_up": SubResource("Animation_5lsy6")
}

[node name="Maxim" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_up2a6")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_dmpk5")
position = Vector2(0, -9)
scale = Vector2(0.3875, 0.4)
texture = ExtResource("1_ni0dt")
hframes = 7

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_72fwa")

[node name="HPTransform2D" type="RemoteTransform2D" parent="."]

[node name="StatusTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xd352")
}

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
